--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,2 +1,17 @@
-<div class="side-bar-header"></div>
-<div class="rooms"></div>
+<div class="side-bar-header">
+  <div class="header-name">
+    <a href="#">Tom</a>
+  </div>
+  <div class="create-chatroom">
+    <a href="#">チャットを作成する</a>
+  </div>
+</div>
+
+<div class="rooms">
+  <div class="room">
+    <a href="#">techroom1</a>
+  </div>
+
+  <div class="room">
+    <a href="#">techroom2</a>
+</div>
